# python-project-lvl3

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml
.github/workflows/: python-package.yml
page-loader/: parser.py  request.py
page-loader/scripts/: page-loader.py
page_loader/: __init__.py  error.py  page.py  parser.py  path.py  src.py  text.py
page_loader/scripts/: __init__.py  page_loader.py
tests/: test_access.py  test_network.py  test_page_loader.py  test_path.py  tests.py
tests/fixtures/data/: html_paths.json  sources_paths.json  src.json
tests/fixtures/expected/: pythonjobs-github-io.html
