[tool.poetry]
name = "LyuPo7_page-loader"
version = "0.1.0"
description = "Page loader"
authors = ["LyuPo <lport@frtk.ru>"]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
repository = "https://github.com/LyuPo7/python-project-lvl3"
packages = [
  { include = "page-loader" },
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
